--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,27 @@
     <modules>
         <module>learnapp-api</module>
         <module>confsrv</module>
+        <module>serviceDiscovery</module>
+        <module>message-producer</module>
+        <module>message-consumer</module>
     </modules>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
