--- a/confsrv/src/main/resources/application.yml
+++ b/confsrv/src/main/resources/application.yml
@@ -8,5 +8,7 @@ spring:
   cloud:
     config:
       server:
+        encrypt:
+          enabled: false
         native:
           searchLocations: classpath:/config/learnsrv
